Wire IngredientRepository into DesignTacoController